# brain

./: .gitignore  Cargo.toml  README.md
docs/: alphaevolve_analysis.md  architecture_proposal.md  compass_artifact_wf-774d197a-7eab-44a9-8fd2-5c50ad6c94d2_text_markdown.md  mathematical-discovery-system.md  neat_development_plan.md  neat_development_workflow.md  neat_environment_setup.md  neat_foundations.md  neat_project_roadmap.md  neat_rust_implementation_plan.md  neat_rust_specification.md  neat_spec.md  recursive_self_improvement_analysis.md  synthesis_paper.md  titans_paper_analysis.md
examples/: log.rs
neat/: Cargo.toml  README.md
neat-fashion-classifier/: Cargo.toml  README.md
neat-fashion-classifier/examples/: algebra_evolution_demo.rs  arithmetic_evolution.rs  fashion_mnist_demo.rs  huggingface_math_demo.rs  mathematical_discovery_demo.rs  modular_evolution_demo.rs  run_benchmarks.rs  simple_addition_demo.rs  simple_benchmark_test.rs  simple_dataset_demo.rs  working_benchmark.rs
neat-fashion-classifier/src/: lib.rs
neat-fashion-classifier/src/benchmarks/: classic_problems.rs  comparison_suite.rs  performance_tests.rs  regression_tests.rs  test_runner.rs
neat-fashion-classifier/src/calculator/: algebra.rs  algebra_encoding.rs  algebra_evaluator.rs  algebra_modules.rs  arithmetic_modules.rs  conjecture.rs  discovery.rs  encoding.rs  mod.rs  modules.rs  sequences.rs
neat-fashion-classifier/src/dataset/: fashion_mnist.rs  mathematical_datasets.rs  mod.rs
neat-fashion-classifier/src/neat/: crossover.rs  fitness.rs  genome.rs  mod.rs  mutation.rs  network.rs  population.rs  speciation.rs  topology.rs
neat/benches/: neat_benchmarks.rs
neat/docs/: advanced_math_api_reference.md  educational_gui_overview.md  educational_system.md  mathematical-discovery-system.md  phase6_advanced_mathematics.md
neat/examples/: advanced_mathematics_demo.rs  algebra_evolution_demo.rs  arithmetic_evolution.rs  educational_platform_demo.rs  fashion_mnist_demo.rs  huggingface_math_demo.rs  mathematical_discovery_demo.rs  modular_evolution_demo.rs  simple_addition_demo.rs  simple_dataset_demo.rs  working_benchmark.rs
neat/gui/: README.md
neat/gui/neat-edu-gui/: README.md
neat/gui/neat-edu-gui/src/: main.ts
neat/gui/neat-edu-gui/src-tauri/: Cargo.toml
neat/gui/neat-edu-gui/src-tauri/icons/: README.md  icon.icns
neat/gui/neat-edu-gui/src-tauri/src/: main.rs
neat/neat-edu/: Cargo.toml  LICENSE  README.md  index.html  vite.config.ts
neat/neat-edu/src/: frontend.rs  lib.rs  main.rs  main.ts  network_visualizer.rs  problem_generator.rs
neat/src/: lib.rs
neat/src/benchmarks/: classic_problems.rs  mod.rs
neat/src/calculator/: algebra.rs  algebra_evaluator.rs  arithmetic.rs  calculus.rs  conjecture.rs  discovery.rs  discrete_math.rs  evaluator.rs  mod.rs  modules.rs  sequence_evaluator.rs  statistics.rs  trigonometry.rs
neat/src/config/: mod.rs  neat_config.rs
neat/src/dataset/: mod.rs
neat/src/education/: adaptive_tutor.rs  assessment.rs  curriculum.rs  explanation_engine.rs  learning_analytics.rs  mod.rs  problem_generator.rs  student_model.rs
neat/src/neat/: crossover.rs  fitness.rs  genome.rs  innovation.rs  integration_tests.rs  mutation.rs  network.rs  parallel.rs  population.rs  topology.rs  trainer.rs
src/: cortex.rs  gene.rs  genome.rs  innovation.rs  innovation_database.rs  lib.rs  link.rs  link_gene.rs  network.rs  network_node.rs  neuron.rs  neuron_gene.rs  novelty_archive.rs  novelty_item.rs  organism.rs  parameters.rs  phenotype_behaviour.rs  population.rs  selection.rs  species.rs  synapse.rs  traits.rs  weight.rs
src/nn/: connection.rs  neural_network.rs  neuron.rs
