[package]
authors = ["David Irvine <david.irvine@maidsafe.net>"]
name = "neuroevolution"
version = "0.0.1"

[lib]
crate-type = ["staticlib"]

[dependencies]
crossbeam = "~0.2.10"
log = "0.3.6"
num_cpus = "1.2.0"
rand = "~0.3.15"
rulinalg = "~0.3.7"
slog = "1.3.2"
slog-term = "1.3.3"

[dependencies.clippy]
optional = true
version = "~0.0.103"
