[package]
name = "neat-edu"
version = "0.1.1"
edition = "2021"
authors = ["David Irvine <david@maidsafe.net>"]
license = "MIT"
description = "Interactive educational platform using NEAT neural networks for mathematical learning with real-time network visualization"
homepage = "https://github.com/dirvine/brain"
repository = "https://github.com/dirvine/brain"
readme = "README.md"
keywords = ["education", "mathematics", "neural-networks", "neat", "gui"]
categories = ["gui", "science", "algorithms"]
include = [
    "src/**/*",
    "icons/**/*",
    "gen/**/*",
    "dist/**/*",
    "tauri.conf.json",
    "tsconfig.json",
    "index.html",
    "vite.config.ts",
    "package.json",
    "build.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies]
tauri = { version = "2.0", features = ["custom-protocol"] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "neat-edu"
path = "src/main.rs"

[[bin]]
name = "neat-edu-cli"
path = "src/bin/neat-edu-cli.rs"