[package]
name = "neat-edu-gui"
version = "0.1.0"
description = "NEAT Educational Platform GUI"
authors = ["NEAT Development Team"]
license = "MIT"
repository = "https://github.com/your-username/neat"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
rand = "0.8"

# Include the main NEAT library (temporarily disabled while fixing compilation issues)
# neat = { path = "../../../" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
